refactor: 출석 Fixture 개선, 출석 단위 테스트 수정 (#261)